--- a/Nikita/Store/view/frontend/templates/store.phtml
+++ b/Nikita/Store/view/frontend/templates/store.phtml
@@ -1,1 +1,4 @@
-<textarea style="width: 150px; "></textarea>
+<form name="add" action="<?php echo $block->getUrl('mystore/add/add');?>" method="POST">
+    <input type="text" name="sku">
+    <button type="submit">add to cart</button>
+</form>
