--- a/Nikita/Store/view/frontend/templates/store.phtml
+++ b/Nikita/Store/view/frontend/templates/store.phtml
@@ -1,4 +1,4 @@
-<form name="add" action="<?php echo $block->getUrl('mystore/add/add');?>" method="POST">
+<form name="add" action="<?php echo $block->getUrl('checkout/cart/add');?>" method="POST">
     <input type="text" name="sku">
     <button type="submit">add to cart</button>
 </form>
